--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-sourcemaps": "~1.5.2",
     "gulp-uglify": "~1.2.0",
     "gulp-useref": "~1.2.0",
-    "gulp-util": "~3.0.5",
+    "gulp-util": "^3.0.8",
     "http-proxy-middleware": "~0.0.5",
     "jasmine-core": "^2.99.1",
     "karma": "^2.0.5",
@@ -51,5 +51,11 @@
   },
   "engines": {
     "node": ">=8.9.4"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.4.5",
+    "cssnano": "^4.1.8",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2"
   }
 }
